--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,25 +5,25 @@ services:
     ports:
       - 80:80
     volumes:
-      - ./app:/var/www/symfony
+      - ${APP_PATH}:/var/www/symfony
     working_dir: /var/www/symfony
   php-fpm:
     build: php-fpm
     volumes:
-      - ./app:/var/www/symfony
+      - ${APP_PATH}:/var/www/symfony
   symfony:
     build: symfony
     user: "1000"
     volumes:
-      - ./app:/var/www/symfony
+      - ${APP_PATH}:/var/www/symfony
       - ./symfony/composer_cache:/var/www/.composer/cache
   mariadb:
     image: mariadb:10.3
     environment:
-      - MYSQL_ROOT_PASSWORD=changeme
-      - MYSQL_DATABASE=symfony
-      - MYSQL_USER=symfony_user
-      - MYSQL_PASSWORD=changemetoo
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
   redis:
     image: redis:4
     volumes:
@@ -44,7 +44,7 @@ services:
     volumes:
       - ./elk/logstash:/etc/logstash
       - ./elk/logstash/patterns:/opt/logstash/patterns
-      - ./app:/var/www/symfony
+      - ${APP_PATH}:/var/www/symfony
 volumes:
   esdata:
     driver: local
