--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -1,13 +1,12 @@
-FROM php:7.1-fpm
+FROM php:7.2-fpm
 
 MAINTAINER Daily Info <info@dailyinfo.co.uk>
 
 RUN apt-get update && apt-get install -y \
     openssl \
     git \
-    unzip \
-    libmcrypt-dev
-RUN docker-php-ext-install pdo pdo_mysql mcrypt
+    unzip
+RUN docker-php-ext-install pdo pdo_mysql
 
 # install xdebug
 RUN pecl install xdebug
